--- a/institute/vasatigruh-vidyalay-karhati.html
+++ b/institute/vasatigruh-vidyalay-karhati.html
@@ -16,6 +16,7 @@
 
     <!-- css  -->
     <link rel="stylesheet" href="/assets/css/institute.css">
+
     <!-- GSAP & ScrollTrigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
@@ -93,10 +94,12 @@
                                 aria-hidden="true"></i>
                         </a>
                         <ul class="nav-submenu" aria-label="Institutes submenu">
-                            <li><a href="#courses">KUMSS Private I.T.I</a></li>
-                            <li><a href="#courses">Schools</a></li>
-                            <li><a href="#courses">Workshops &amp; Labs</a></li>
-                            <li><a href="#contact">Campus Visit</a></li>
+                            <li><a href="#courses">Vasatigruh Vidyalay Karhati</a></li>
+                            <li><a href="#courses">New English School Dhakale</a></li>
+                            <li><a href="#courses">Primary School Karhati Tembha</a></li>
+                            <li><a href="#contact">KUMSS Private I.T.I Karhati</a></li>
+                            <li><a href="#contact">Gurukul English Medium School</a></li>
+                            <li><a href="#contact">Shardabai Pawar Kala Mahavidhyalaya</a></li>
                         </ul>
                     </li>
 
@@ -142,7 +145,6 @@
         </div>
     </header>
 
-
     <!-- Premium Hero with HLS Video -->
     <section class="hero" id="home">
         <div class="floating-elements">
@@ -160,10 +162,7 @@
 
         <div class="container">
             <div class="hero-content">
-                <div class="hero-subtitle">LEGACY OF EXCELLENCE</div>
-                <h1 class="hero-title">
-                    Craft Your <span class="hero-highlight">Future</span> at KUMSS
-                </h1>
+                <div class="hero-subtitle">Vasatigruh Vidyalay Karhati</div>
                 <p class="hero-description">
                     For over seven decades, we've been transforming lives through exceptional education.
                     We blend traditional values with cutting-edge technology to create leaders who shape tomorrow.
@@ -173,20 +172,9 @@
                     "Education opens up the mind, expands it and allows you to improve your life in so many ways."
                 </div>
 
-                <div class="hero-buttons">
-                    <a href="#courses" class="btn btn-primary">
-                        <i class="fas fa-rocket"></i>
-                        <span>Explore Programs</span>
-                    </a>
-                    <a href="#contact" class="btn btn-secondary">
-                        <i class="fas fa-calendar-alt"></i>
-                        <span>Schedule Visit</span>
-                    </a>
-                </div>
             </div>
         </div>
     </section>
-
 
     <!-- About Section with Tabs -->
     <section class="about-section" id="about">
@@ -195,21 +183,17 @@
                 <span class="subtitle">Our Legacy</span>
                 <h2>Seven Decades of Excellence</h2>
                 <p class="lead-text">
-                    What started as a visionary seed planted by late Dr. Shri A.J. Agarkar has grown into a mighty
-                    educational institution under the leadership of KUMSS President and Deputy CM of Maharashtra
-                    Shri Ajitdada Pawar since 2004.
+                    Established in 1952, Vastigruh Vidyalay Karhati has been serving the educational needs of the
+                    Karhati community
+                    for over 70 years. Our school was founded with the vision of providing quality education while
+                    preserving and
+                    promoting agricultural traditions.
                 </p>
             </div>
 
             <div class="about-tabs">
                 <button class="tab-btn active" data-tab="history">
                     <i class="fas fa-history"></i> History
-                </button>
-                <button class="tab-btn" data-tab="mission">
-                    <i class="fas fa-bullseye"></i> Mission & Vision
-                </button>
-                <button class="tab-btn" data-tab="values">
-                    <i class="fas fa-heart"></i> Core Values
                 </button>
             </div>
 
@@ -331,56 +315,213 @@
     <section class="courses-section" id="courses">
         <div class="container">
             <div class="section-title">
-                <span class="subtitle">Our Programs</span>
-                <h2>Technical & Skill Development</h2>
+                <!-- <span class="subtitle">School Features</span> -->
+                <h2>School Features</h2>
                 <p class="lead-text">
-                    Transform into a professional within 2 years through our industry-aligned training programs.
-                    We develop excellent infrastructure with well-equipped workshops updated regularly.
+                    Industry-focused learning that builds strong basics, real skills, and confident communication for
+                    your
+                    child’s
+                    future.
                 </p>
             </div>
 
             <div class="courses-grid">
                 <div class="course-card">
                     <span class="course-badge">Technical</span>
-                    <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                        alt="Draughtsman Mechanical" class="course-image" loading="lazy">
+                    <img src="/assets/img/quality-education.jpg" alt="Draughtsman Mechanical" class="course-image"
+                        loading="lazy">
                     <div class="course-content">
-                        <span class="course-duration"><i class="fas fa-clock"></i> 2 Years</span>
-                        <h3>Draughtsman Mechanical</h3>
+                        <h3>Quality Education</h3>
                         <p>
-                            Training on basic drafting terminology, multi-view drawings, projection methods,
-                            auxiliary views, section views, and technical sketching.
+                            Affiliated with MSBSHSE, offering comprehensive secondary and higher secondary education
+                            with a
+                            focus on
+                            holistic development.
                         </p>
                     </div>
                 </div>
 
                 <div class="course-card">
-                    <span class="course-badge">Electrical</span>
-                    <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                        alt="Electrician" class="course-image" loading="lazy">
+                    <span class="course-badge">Agricultural</span>
+                    <img src="/assets/img/agricultural-focus.jpg" alt="Electrician" class="course-image" loading="lazy">
                     <div class="course-content">
-                        <span class="course-duration"><i class="fas fa-clock"></i> 2 Years</span>
-                        <h3>Electrician</h3>
+                        <h3>Agricultural Focus</h3>
                         <p>
-                            Comprehensive training on safety, environment, fire extinguishers, artificial
-                            respiratory resuscitation, and electrical systems.
+                            Unique curriculum that integrates agricultural education with traditional academics,
+                            providing
+                            practical
+                            learning experiences.
                         </p>
                     </div>
                 </div>
 
                 <div class="course-card">
-                    <span class="course-badge">Electronics</span>
-                    <img src="https://images.unsplash.com/photo-1518709268805-4e9042af2176?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80"
-                        alt="Electronics Mechanic" class="course-image" loading="lazy">
+                    <span class="course-badge">Experienced Faculty</span>
+                    <img src="/assets/img/experienced-faculty.jpg" alt="Electronics Mechanic" class="course-image"
+                        loading="lazy">
                     <div class="course-content">
-                        <span class="course-duration"><i class="fas fa-clock"></i> 2 Years</span>
-                        <h3>Electronics Mechanic</h3>
+                        <h3>Experienced Faculty</h3>
                         <p>
-                            Training for solar panel installation technicians, electronics fitters,
-                            television and cable TV installers, and industrial equipment repair.
+                            Dedicated and highly qualified teaching staff committed to student success and development.
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Simple Faculty Section -->
+    <section class="simple-faculty-section" id="faculty">
+        <div class="container">
+            <div class="section-title">
+                <span class="subtitle">Meet Our Team</span>
+                <p class="lead-text">
+                    The teachers of our school are well qualified and professionally trained. Some of them are qualified
+                    well above
+                    degree requirements. The school has a regular Head Master who provides strong leadership and vision
+                    for our
+                    educational community.
+                </p>
+            </div>
+
+            <!-- Faculty Grid (Visible Cards) -->
+            <div class="simple-faculty-grid" id="visibleFacultyGrid">
+                <!-- Faculty Member 1 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Shri. Shrikant Patil">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Shri. Shrikant Patil</h3>
+                        <p class="faculty-role">Principal</p>
+                        <p class="faculty-qual">M.A., M.Ed., Ph.D.</p>
+                        <p class="faculty-exp">25+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 2 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mrs. Sunita Deshmukh">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mrs. Sunita Deshmukh</h3>
+                        <p class="faculty-role">Vice Principal</p>
+                        <p class="faculty-qual">M.Sc. Physics, B.Ed.</p>
+                        <p class="faculty-exp">20+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 3 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1544717305-2782549b5136?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mr. Rajesh Kumar">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mr. Rajesh Kumar</h3>
+                        <p class="faculty-role">Maths Teacher</p>
+                        <p class="faculty-qual">M.Sc. Mathematics</p>
+                        <p class="faculty-exp">15+ Years Experience</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Hidden Faculty Grid (Initially Hidden) -->
+            <div class="hidden-faculty-grid" id="hiddenFacultyGrid" style="display: none;">
+                <!-- Faculty Member 4 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mrs. Meera Joshi">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mrs. Meera Joshi</h3>
+                        <p class="faculty-role">English Teacher</p>
+                        <p class="faculty-qual">M.A. English, TEFL</p>
+                        <p class="faculty-exp">12+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 5 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1580894894513-541e068a3e2b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Dr. Anand Rao">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Dr. Anand Rao</h3>
+                        <p class="faculty-role">Agri. Studies Head</p>
+                        <p class="faculty-qual">Ph.D. Agriculture</p>
+                        <p class="faculty-exp">18+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 6 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mr. Vikram Singh">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mr. Vikram Singh</h3>
+                        <p class="faculty-role">Sports Head</p>
+                        <p class="faculty-qual">M.P.Ed., NIS Coach</p>
+                        <p class="faculty-exp">10+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 7 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1551836026-d5c2c5af91f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mrs. Anjali Sharma">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mrs. Anjali Sharma</h3>
+                        <p class="faculty-role">Chemistry Teacher</p>
+                        <p class="faculty-qual">M.Sc. Chemistry</p>
+                        <p class="faculty-exp">14+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 8 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1556157382-2eda3e8a9944?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mr. Ravi Verma">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mr. Ravi Verma</h3>
+                        <p class="faculty-role">History Teacher</p>
+                        <p class="faculty-qual">M.A. History, B.Ed.</p>
+                        <p class="faculty-exp">16+ Years Experience</p>
+                    </div>
+                </div>
+
+                <!-- Faculty Member 9 -->
+                <div class="simple-faculty-card">
+                    <div class="faculty-avatar">
+                        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
+                            alt="Mr. Sameer Joshi">
+                    </div>
+                    <div class="faculty-content">
+                        <h3>Mr. Sameer Joshi</h3>
+                        <p class="faculty-role">Computer Teacher</p>
+                        <p class="faculty-qual">M.C.A., B.Ed.</p>
+                        <p class="faculty-exp">8+ Years Experience</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- View More Button -->
+            <div class="view-more-container">
+                <button class="btn-view-more" id="viewMoreBtn">
+                    <span class="btn-text">View All Faculty</span>
+                    <i class="fas fa-chevron-down btn-icon"></i>
+                </button>
             </div>
         </div>
     </section>
@@ -682,6 +823,10 @@
             </div>
         </div>
     </footer>
+
+
+    <!-- js file  -->
+    <script src="/assets/js/institute.js"></script>
 
     <!-- JavaScript -->
     <script>
