faculty-section-added

--- a/institute/vasatigruh-vidyalay-karhati.html
+++ b/institute/vasatigruh-vidyalay-karhati.html
@@ -389,14 +389,13 @@
                 <!-- Faculty Member 1 -->
                 <div class="simple-faculty-card">
                     <div class="faculty-avatar">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=80"
-                            alt="Shri. Shrikant Patil">
+                        <img src="/assets/img/anita.jpeg" alt="Shri. Shrikant Patil">
                     </div>
                     <div class="faculty-content">
-                        <h3>Shri. Shrikant Patil</h3>
+                        <h3>Mrs- Anita Ravindra Chavan</h3>
                         <p class="faculty-role">Principal</p>
                         <p class="faculty-qual">M.A., M.Ed., Ph.D.</p>
-                        <p class="faculty-exp">25+ Years Experience</p>
+                        <p class="faculty-exp">M.A.B.Ed.(Phy.) D.S.M</p>
                     </div>
                 </div>
 
@@ -408,9 +407,9 @@
                     </div>
                     <div class="faculty-content">
                         <h3>Mrs. Sunita Deshmukh</h3>
-                        <p class="faculty-role">Vice Principal</p>
-                        <p class="faculty-qual">M.Sc. Physics, B.Ed.</p>
-                        <p class="faculty-exp">20+ Years Experience</p>
+                        <p class="faculty-role">Mr. Bhausaheb Pandurang Pisal</p>
+                        <p class="faculty-qual">Supervisor</p>
+                        <p class="faculty-exp">B.A.B.P.Ed.</p>
                     </div>
                 </div>
 
