img-folder-create

--- a/institute/vasatigruh-vidyalay-karhati.html
+++ b/institute/vasatigruh-vidyalay-karhati.html
@@ -78,14 +78,8 @@
 
                     <li class="has-submenu">
                         <a href="/about.html" class="nav-link" aria-haspopup="true">
-                            About <i class="fas fa-chevron-down nav-chevron" aria-hidden="true"></i>
+                            About
                         </a>
-                        <ul class="nav-submenu" aria-label="About submenu">
-                            <li><a href="/about.html#overview">Overview</a></li>
-                            <li><a href="/about.html#history">History</a></li>
-                            <li><a href="/about.html#vision-mission">Vision &amp; Mission</a></li>
-                            <li><a href="/about.html#leadership">Leadership</a></li>
-                        </ul>
                     </li>
 
                     <li class="has-submenu">
@@ -103,40 +97,11 @@
                         </ul>
                     </li>
 
-                    <li class="has-submenu">
-                        <a href="#leadership" class="nav-link" aria-haspopup="true">
-                            Admissions <i class="fas fa-chevron-down nav-chevron" aria-hidden="true"></i>
-                        </a>
-                        <ul class="nav-submenu" aria-label="Admissions submenu">
-                            <li><a href="#contact">How to Apply</a></li>
-                            <li><a href="#courses">Programs</a></li>
-                            <li><a href="#contact">Eligibility</a></li>
-                            <li><a href="#contact">Fees</a></li>
-                            <li><a href="#contact">Scholarships</a></li>
-                        </ul>
-                    </li>
 
                     <li class="has-submenu">
                         <a href="#testimonials" class="nav-link" aria-haspopup="true">
-                            Gallery <i class="fas fa-chevron-down nav-chevron" aria-hidden="true"></i>
+                            Gallery
                         </a>
-                        <ul class="nav-submenu" aria-label="Gallery submenu">
-                            <li><a href="#testimonials">Campus</a></li>
-                            <li><a href="#testimonials">Events</a></li>
-                            <li><a href="#testimonials">Workshops</a></li>
-                            <li><a href="#testimonials">Students</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="has-submenu">
-                        <a href="#contact" class="nav-link" aria-haspopup="true">
-                            Careers <i class="fas fa-chevron-down nav-chevron" aria-hidden="true"></i>
-                        </a>
-                        <ul class="nav-submenu" aria-label="Careers submenu">
-                            <li><a href="#contact">Open Positions</a></li>
-                            <li><a href="#contact">Internships</a></li>
-                            <li><a href="mailto:info@kumss.org">HR Email</a></li>
-                        </ul>
                     </li>
 
                     <li><a href="tel:+919421394242" class="btn btn-primary">Contact Us</a></li>
