--- a/institute/primary-school-karhati-tembha.html
+++ b/institute/primary-school-karhati-tembha.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krushi Udyog Mul Shikshan Sansthan | Excellence Since 1951</title>
+    <title>Primary School Karhati Tembha</title>
     <link rel="icon" href="https://kumss.org/assets/kumss_log.png" type="image/x-icon">
 
     <!-- Fonts -->
