--- a/kumss-private-iti-Karhati/index.html
+++ b/kumss-private-iti-Karhati/index.html
@@ -67,7 +67,7 @@
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
                 <a href="/index-3.html" class="gm-logo">
-                    <img src="https://kumss.org/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
+                    <img src="https://kumss.org/assets/kumss_log.png" alt="Primary School Karhati Tembha" class="gm-logo-img">
                 </a>
 
                 <!-- Mobile toggle -->
@@ -80,38 +80,28 @@
 
                 <!-- Links -->
                 <ul class="gm-links" id="navLinks">
-                    <li><a class="gm-link" href="/index-3.html">Home</a></li>
+                    <li><a class="gm-link" href="/#">Home</a></li>
 
                     <li class="gm-item">
-                        <a class="gm-link" href="/about.html">About</a>
+                        <a class="gm-link" href="/#">About Us</a>
                     </li>
 
-                    <!-- Dropdown -->
-                    <li class="gm-item gm-dropdown" data-dropdown>
-                        <!-- Desktop uses hover/focus. Mobile uses this button. -->
-                        <button class="gm-link gm-dropbtn" type="button" aria-haspopup="true" aria-expanded="false"
-                            aria-controls="institutesMenu">
-                            Our Educational Institutes
-                            <i class="fas fa-chevron-down gm-chevron" aria-hidden="true"></i>
-                        </button>
-
-                        <ul class="gm-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
-                            <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a>
-                            </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">KUMSS Private I.T.I Karhati</a></li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Gurukul English Medium School</a>
-                            </li>
-                            <li role="none"><a role="menuitem" href="/index-3.html">Shardabai Pawar Kala
-                                    Mahavidhyalaya</a></li>
-                        </ul>
+                    <li class="gm-item">
+                        <a class="gm-link" href="/#">Academics</a>
                     </li>
 
-                    <li><a class="gm-link" href="#testimonials">Gallery</a></li>
+                    <li><a class="gm-link" href="#">Admissions</a></li>
+
+                    <li class="gm-item">
+                        <a class="gm-link" href="/#">Facilities</a>
+                    </li>
+
+                    <li class="gm-item">
+                        <a class="gm-link" href="/#">Gallery</a>
+                    </li>
 
                     <li class="gm-cta">
-                        <a class="gm-btn" href="tel:+919421394242">Contact Us</a>
+                        <a class="gm-btn" href="#">Contact Us</a>
                     </li>
                 </ul>
             </nav>
@@ -135,16 +125,10 @@
 
         <div class="container">
             <div class="hero-content">
-                <div class="hero-subtitle">Vasatigruh Vidyalay Karhati</div>
+                <div class="hero-subtitle">Primary School Karhati Tembha</div>
                 <p class="hero-description">
-                    For over seven decades, we've been transforming lives through exceptional education.
-                    We blend traditional values with cutting-edge technology to create leaders who shape tomorrow.
+                    Enroll your child now for the upcoming academic session. Limited seats available.
                 </p>
-
-                <div class="hero-quote">
-                    "Education opens up the mind, expands it and allows you to improve your life in so many ways."
-                </div>
-
             </div>
         </div>
     </section>
@@ -153,133 +137,13 @@
     <section class="about-section" id="about">
         <div class="container">
             <div class="section-title">
-                <span class="subtitle">Our Legacy</span>
-                <h2>Seven Decades of Excellence</h2>
+                <span class="subtitle">About Our School</span>
+                <h2>Primary School Karhati Tembha</h2>
                 <p class="lead-text">
-                    Established in 1952, Vastigruh Vidyalay Karhati has been serving the educational needs of the
-                    Karhati community
-                    for over 70 years. Our school was founded with the vision of providing quality education while
-                    preserving and
-                    promoting agricultural traditions.
+                    Established in 2000, Primary School Karhati Tembha has been a beacon of quality education in the region. <br>
+                    At Karhati Tembha, we believe in the holistic development of every child, focusing not just on academic excellence
+                    but also on moral values, sports, and extracurricular activities.
                 </p>
-            </div>
-
-            <div class="about-tabs">
-                <button class="tab-btn active" data-tab="history">
-                    <i class="fas fa-history"></i> History
-                </button>
-            </div>
-
-            <div class="tab-content active" id="history">
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-year">1951</div>
-                        <h3>Foundation</h3>
-                        <p>Krushi Udyog Mul Shikshan Sansthan established by visionary founder late Dr. Shri A.J.
-                            Agarkar</p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">2004</div>
-                        <h3>New Leadership</h3>
-                        <p>Shri Ajitdada Pawar becomes President, marking a new era of growth and development</p>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">Present</div>
-                        <h3>Modern Excellence</h3>
-                        <p>6 institutions serving 2000+ students with state-of-the-art facilities</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="tab-content" id="mission">
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-eye"></i>
-                        </div>
-                        <h3>Our Vision</h3>
-                        <p>To empower students through quality education in skill development and technical education
-                        </p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-bullseye"></i>
-                        </div>
-                        <h3>Our Mission</h3>
-                        <p>Provide high-quality education in a safe, respectful, and inclusive environment</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="tab-content" id="values">
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-gem"></i>
-                        </div>
-                        <h3>Excellence</h3>
-                        <p>Commitment to highest standards in education and character building</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        <h3>Community</h3>
-                        <p>Building strong relationships and supporting each other's growth</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon">
-                            <i class="fas fa-lightbulb"></i>
-                        </div>
-                        <h3>Innovation</h3>
-                        <p>Embracing new technologies and teaching methodologies</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Vision & Mission Section -->
-    <section class="vision-mission-section" id="vision-mission">
-        <div class="container">
-            <div class="section-title">
-                <span class="subtitle">Our Guiding Principles</span>
-                <h2>Vision & Mission</h2>
-                <p class="lead-text">
-                    The foundation upon which we build excellence in education and character development
-                </p>
-            </div>
-
-            <div class="vision-mission-grid">
-                <div class="vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-eye"></i>
-                    </div>
-                    <h3 class="vm-title">Our Vision</h3>
-                    <div class="vm-text">
-                        <p>To establish ourselves as a premier institution that empowers students through quality
-                            education in skill development and technical education. We envision creating a learning
-                            ecosystem that fosters innovation, critical thinking, and holistic development.</p>
-                        <p style="margin-top: 1rem;">Our vision extends beyond academic excellence to developing
-                            responsible citizens who contribute meaningfully to society while maintaining the highest
-                            ethical standards.</p>
-                    </div>
-                </div>
-
-                <div class="vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-bullseye"></i>
-                    </div>
-                    <h3 class="vm-title">Our Mission</h3>
-                    <div class="vm-text">
-                        <p>To provide high-quality education in a safe, respectful, and inclusive environment that
-                            builds a foundation for lifelong learning. We are committed to developing excellent
-                            infrastructure with well-equipped workshops that are regularly updated.</p>
-                        <p style="margin-top: 1rem;">Through our comprehensive programs, we aim to develop leadership
-                            qualities, interpersonal skills, creativity, and strong values in every student, preparing
-                            them for success in their chosen fields and in life.</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
@@ -482,60 +346,6 @@
                     <span class="btn-text">View All Faculty</span>
                     <i class="fas fa-chevron-down btn-icon"></i>
                 </button>
-            </div>
-        </div>
-    </section>
-
-    <!-- Leadership with Flip Cards -->
-    <section class="leadership-section" id="leadership">
-        <div class="container">
-            <div class="section-title">
-                <span class="subtitle">Our Leaders</span>
-                <h2>Executive Committee</h2>
-            </div>
-
-            <div class="leadership-grid">
-                <div class="leader-card">
-                    <div class="leader-front">
-                        <div class="leader-avatar">
-                            <i class="fas fa-user-tie"></i>
-                        </div>
-                        <h3 class="leader-role">Chairman</h3>
-                        <h4>Shri. Ajit Anantrao Pawar</h4>
-                    </div>
-                    <div class="leader-back">
-                        <h3>Deputy Chief Minister of Maharashtra</h3>
-                        <p>Leading KUMSS since 2004 with visionary leadership and commitment to education</p>
-                    </div>
-                </div>
-
-                <div class="leader-card">
-                    <div class="leader-front">
-                        <div class="leader-avatar">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <h3 class="leader-role">Vice-Chairman</h3>
-                        <h4>Shri. Dasharathrao Babaso Dhumal</h4>
-                    </div>
-                    <div class="leader-back">
-                        <h3>Educational Visionary</h3>
-                        <p>Dedicated to providing quality education and skill development opportunities</p>
-                    </div>
-                </div>
-
-                <div class="leader-card">
-                    <div class="leader-front">
-                        <div class="leader-avatar">
-                            <i class="fas fa-user"></i>
-                        </div>
-                        <h3 class="leader-role">Secretary</h3>
-                        <h4>Shri. Prafulla Bhimdeo Taware</h4>
-                    </div>
-                    <div class="leader-back">
-                        <h3>Administrative Head</h3>
-                        <p>Managing day-to-day operations and strategic planning</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
