--- a/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html
+++ b/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html
@@ -35,6 +35,188 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <style>
+        
+      /* Center + stack icon above title */
+.vm-head{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+  margin-bottom: 12px;
+}
+
+/* Icon box (adjust sizes if you want smaller/larger) */
+.vm-icon{
+  width: 54px;
+  height: 54px;
+  border-radius: 16px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Icon size */
+.vm-icon i{
+  font-size: 20px;
+}
+
+/* Title centered */
+.vm-title{
+  margin: 0;
+  font-size: 30px;
+  line-height: 1.2;
+}
+
+/* Optional: align text body nicely (keep readable) */
+.vm-text{
+  text-align: left; /* change to center if you want full centered paragraph */
+}
+
+
+        /* About School Section */
+        .about-school {
+            padding: 70px 0;
+            background: #ffffff;
+        }
+
+        .about-school .container {
+            width: min(1100px, 92%);
+            margin: 0 auto;
+        }
+
+        .about-grid {
+            display: grid;
+            grid-template-columns: 1fr 1.2fr;
+            gap: 40px;
+            align-items: center;
+        }
+
+        .about-media {
+            border-radius: 18px;
+            overflow: hidden;
+            box-shadow: 0 18px 45px rgba(0, 0, 0, 0.12);
+            background: #f5f5f5;
+        }
+
+        .about-media img {
+            width: 100%;
+            height: 100%;
+            display: block;
+            aspect-ratio: 4 / 3;
+            object-fit: cover;
+        }
+
+        /* Make both columns equal height */
+        .about-grid {
+            align-items: stretch;
+            /* important */
+        }
+
+        /* Image wrapper takes full height of the row */
+        .about-media {
+            height: 100%;
+            border-radius: 18px;
+            overflow: hidden;
+            box-shadow: 0 18px 45px rgba(0, 0, 0, 0.12);
+            background: #f5f5f5;
+        }
+
+        /* Image fills full height like content */
+        .about-media img {
+            width: 100%;
+            height: 100%;
+            display: block;
+            object-fit: cover;
+            /* keeps it clean, crops if needed */
+            /* remove aspect-ratio */
+        }
+
+        .about-kicker {
+            display: inline-block;
+            font-weight: 600;
+            font-size: 14px;
+            letter-spacing: 0.3px;
+            padding: 8px 12px;
+            border-radius: 999px;
+            border: 1px solid rgba(0, 0, 0, 0.12);
+            margin-bottom: 12px;
+        }
+
+        .about-content h2 {
+            font-size: clamp(24px, 3vw, 34px);
+            line-height: 1.2;
+            margin: 0 0 14px;
+        }
+
+        .about-content h3 {
+            font-size: 18px;
+            margin: 18px 0 10px;
+        }
+
+        .about-content p {
+            margin: 0 0 12px;
+            line-height: 1.7;
+            color: #444;
+        }
+
+        .about-actions {
+            display: flex;
+            gap: 12px;
+            margin-top: 18px;
+            flex-wrap: wrap;
+        }
+
+        .btn-primary,
+        .btn-outline {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 11px 16px;
+            border-radius: 12px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: 0.2s ease;
+        }
+
+        .btn-primary {
+            background: #0f8042;
+            color: #fff;
+            border: 1px solid #0f8042;
+        }
+
+        .btn-primary:hover {
+            filter: brightness(0.95);
+        }
+
+        .btn-outline {
+            background: transparent;
+            color: #0f8042;
+            border: 1px solid rgba(15, 128, 66, 0.35);
+        }
+
+        .btn-outline:hover {
+            background: rgba(15, 128, 66, 0.08);
+        }
+
+        /* Mobile Responsive */
+        @media (max-width: 900px) {
+            .about-grid {
+                grid-template-columns: 1fr;
+                gap: 22px;
+            }
+
+            .about-school {
+                padding: 55px 0;
+            }
+
+            .about-media img {
+                aspect-ratio: 16 / 10;
+            }
+        }
+    </style>
+
 
 </head>
 
@@ -67,7 +249,7 @@
             <nav class="gm-nav" aria-label="Primary">
                 <!-- Logo -->
                 <a href="/index-3.html" class="gm-logo">
-                    <img src="https://kumss.org/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
+                    <img src="/assets/kumss_log.png" alt="KUMSS Logo" class="gm-logo-img">
                 </a>
 
                 <!-- Mobile toggle -->
@@ -96,7 +278,9 @@
                         </button>
 
                         <ul class="gm-submenu" id="institutesMenu" role="menu" aria-label="Institutes submenu">
-                            <li role="none"><a role="menuitem" href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a></li>
+                            <li role="none"><a role="menuitem"
+                                    href="/institute/vasatigruh-vidyalay-karhati.html">Vasatigruh Vidyalay Karhati</a>
+                            </li>
                             <li role="none"><a role="menuitem" href="/index-3.html">New English School Dhakale</a></li>
                             <li role="none"><a role="menuitem" href="/index-3.html">Primary School Karhati Tembha</a>
                             </li>
@@ -150,6 +334,58 @@
     </section>
 
     <!-- About Section with Tabs -->
+    <section class="about-school" id="about-school">
+        <div class="container">
+            <div class="about-grid">
+
+                <!-- Left: Image -->
+                <div class="about-media">
+                    <img src="/assets/img/faculty/faculty-1.jpg" alt="Vastigruh Vidyalay Karhati campus"
+                        loading="lazy" />
+                </div>
+
+                <!-- Right: Content -->
+                <div class="about-content">
+                    <span class="about-kicker">About Our School</span>
+                    <h2>Vastigruh Vidyalay Karhati (VVK)</h2>
+
+                    <p>
+                        Vastigruh Vidyalay Karhati (VVK) is a Co-educational institution located at Karhati,
+                        Baramati in Pune district of Maharashtra, India. We are affiliated with Maharashtra State
+                        Board of Secondary and Higher Secondary Education (MSBSHSE). Vastigruh Vidyalay Karhati
+                        offers secondary and higher secondary education.
+                    </p>
+
+                    <h3>Our Unique Approach: Agricultural Education</h3>
+
+                    <p>
+                        The highlight of our school is its agricultural education program. We teach students about
+                        farming and its importance and impact on day to day life of villagers as well as its
+                        surrounding environment.
+                    </p>
+
+                    <!-- <p>
+                        Research shows that learning experiences that usually take place outside the classroom
+                        have long lasting and positive impact on children. These experiences have potential to
+                        develop a range of skills such as teamwork, collaboration, communication and leadership.
+                    </p>
+
+                    <p>
+                        The children at our school learn to give a helping hand to their parents who mainly work
+                        in the fields, creating a strong connection between education and practical life skills.
+                    </p> -->
+
+                    <!-- Optional CTA -->
+                    <div class="about-actions">
+                        <a href="#contact" class="btn-primary">Enquire Now</a>
+                        <a href="#gallery" class="btn-outline">View Gallery</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <section class="about-section" id="about">
         <div class="container">
             <div class="section-title">
@@ -252,10 +488,12 @@
 
             <div class="vision-mission-grid">
                 <div class="vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-eye"></i>
+                    <div class="vm-head">
+                        <span class="vm-icon">
+                            <i class="fas fa-eye"></i>
+                        </span>
+                        <h3 class="vm-title">Our Vision</h3>
                     </div>
-                    <h3 class="vm-title">Our Vision</h3>
                     <div class="vm-text">
                         <p>To establish ourselves as a premier institution that empowers students through quality
                             education in skill development and technical education. We envision creating a learning
@@ -267,22 +505,29 @@
                 </div>
 
                 <div class="vm-card">
-                    <div class="vm-icon">
-                        <i class="fas fa-bullseye"></i>
-                    </div>
-                    <h3 class="vm-title">Our Mission</h3>
-                    <div class="vm-text">
-                        <p>To provide high-quality education in a safe, respectful, and inclusive environment that
-                            builds a foundation for lifelong learning. We are committed to developing excellent
-                            infrastructure with well-equipped workshops that are regularly updated.</p>
-                        <p style="margin-top: 1rem;">Through our comprehensive programs, we aim to develop leadership
-                            qualities, interpersonal skills, creativity, and strong values in every student, preparing
-                            them for success in their chosen fields and in life.</p>
-                    </div>
-                </div>
+  <div class="vm-head">
+    <span class="vm-icon">
+      <i class="fas fa-bullseye"></i>
+    </span>
+    <h3 class="vm-title">Our Mission</h3>
+  </div>
+
+  <div class="vm-text">
+    <p>To provide high-quality education in a safe, respectful, and inclusive environment that
+      builds a foundation for lifelong learning. We are committed to developing excellent
+      infrastructure with well-equipped workshops that are regularly updated.</p>
+    <p style="margin-top: 1rem;">Through our comprehensive programs, we aim to develop leadership
+      qualities, interpersonal skills, creativity, and strong values in every student, preparing
+      them for success in their chosen fields and in life.</p>
+  </div>
+</div>
+
             </div>
         </div>
     </section>
+
+
+
 
     <!-- Courses Section -->
     <section class="courses-section" id="courses">
