created the satff.html page

--- a/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html
+++ b/vasatigruh-vidyalay-karhati/vasatigruh-vidyalay-karhati.html
@@ -292,7 +292,7 @@
                         </ul>
                     </li>
 
-                    <li class="gm-link" href="/vasatigruh-vidyalay-karhati/staff.html">Staff</li>
+                  <li class="gm-item"><a class="gm-link active" style="color: var(--primary-color); font-weight:600;" href="/vasatigruh-vidyalay-karhati/staff.html">Staff</a></li>
 
                     <li><a class="gm-link" href="#testimonials">Gallery</a></li>
 
