--- a/vasatigruh-vidyalay-karhati/staff.html
+++ b/vasatigruh-vidyalay-karhati/staff.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Staff | Vasatigruh Vidyalay Karhati</title>
+    <title>Our Staff | Shardabai Pawar Kala Mahavidhyalaya</title>
     <link rel="icon" href="https://kumss.org/assets/kumss_log.png" type="image/x-icon">
 
     <!-- Fonts -->
